fix: buttons overflow

--- a/css/style.css
+++ b/css/style.css
@@ -212,12 +212,8 @@ img {
 }
 
 .button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 0;
-  width: 240px;
-  height: 50px;
+  display: inline-block;
+  padding: 17px 20px 15px;
   color: var(--basic-white);
   border: none;
   border-radius: 3px;
@@ -225,6 +221,7 @@ img {
   font-size: 16px;
   line-height: 18px;
   font-weight: 500;
+  text-align: center;
   text-transform: uppercase;
   background-color: var(--red);
   cursor: pointer;
@@ -260,6 +257,8 @@ img {
 
 .slide-button {
   margin-top: 38px;
+  min-width: 240px;
+  max-width: 360px;
 }
 
 .h1 {
@@ -637,7 +636,7 @@ img {
 
 .results-template-button {
   margin-top: 32px;
-  width: 200px;
+  min-width: 200px;
 }
 
 .results-page-nav {
@@ -678,9 +677,9 @@ img {
 
 .services-list li {
   display: flex;
+  align-items: flex-start;
   flex-direction: column;
   max-width: 300px;
-  /* margin-bottom: 10px; */
 }
 
 .services-list img {
@@ -704,7 +703,9 @@ img {
 
 .services-button {
   margin-top: 32px;
-  width: 160px;
+  min-width: 160px;
+  /* padding-left: 40px; */
+  /* padding-right: 40px; */
 }
 
 .services-button-green {
@@ -870,7 +871,6 @@ img {
   padding-top: 54px;
   padding-bottom: 54px;
   background-image: url(../img/map.png);
-  background-color: var(--active-page);
   background-size: 100%;
 }
 
